--- a/templates/post.html
+++ b/templates/post.html
@@ -1,9 +1,15 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
-    <article>
-        <h1>{{ post.title }}</h1>
-        <p>{{ post.summary }}</p>
-        <p><em>Views: {{ post.views }}</em></p>
-    </article>
+<div class="card mb-3">
+  <div class="card-body">
+    <h2>{{ post.title }}</h2>
+    <p><strong>Category:</strong> {{ post.category }}</p>
+    {% if post.image %}
+    <img src="{{ url_for('uploaded_file', filename=post.image) }}" class="img-fluid mb-3">
+    {% endif %}
+    <p>{{ post.content }}</p>
+    <a href="/" class="btn btn-secondary">Back to Home</a>
+  </div>
+</div>
 {% endblock %}
