--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2 class="mt-5">Admin Login</h2>
-{% if error %}
-<p class="text-danger">{{ error }}</p>
-{% endif %}
-<form method="POST">
-  <input type="text" name="username" placeholder="Username" class="form-control mb-2" required>
-  <input type="password" name="password" placeholder="Password" class="form-control mb-2" required>
+
+<h2 class="mt-3">Admin Login</h2>
+<form method="POST" class="mt-3">
+  {% if error %}
+  <div class="alert alert-danger">{{ error }}</div>
+  {% endif %}
+  <div class="mb-2">
+    <input type="text" name="username" placeholder="Username" class="form-control" required>
+  </div>
+  <div class="mb-2">
+    <input type="password" name="password" placeholder="Password" class="form-control" required>
+  </div>
   <button class="btn btn-primary">Login</button>
 </form>
+
 {% endblock %}
