--- a/templates/post.html
+++ b/templates/post.html
@@ -1,10 +1,15 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block content %}
 <h2>{{ post.title }}</h2>
-<p>Category: {{ post.category }}</p>
+<p><strong>Category:</strong> {{ post.category }}</p>
 {% if post.image %}
-<img src="{{ url_for('uploaded_file', filename=post.image) }}" class="img-fluid mb-3">
+<img src="{{ url_for('uploaded_file', filename=post.image) }}" class="img-fluid my-3">
 {% endif %}
 <p>{{ post.content }}</p>
-<a href="/" class="btn btn-secondary mt-3">Back to Home</a>
+
+{% if post.adsense %}
+<div class="my-3">
+  {{ post.adsense | safe }}
+</div>
+{% endif %}
 {% endblock %}
